--- a/style.css
+++ b/style.css
@@ -1,202 +1,63 @@
-body {
-    background-color: white;
-
-}
-footer {
-    background-color: black;
-    color: white;
-    font-size: 2rem;
-    text-align: center;
-    margin-top: 40%;
-}
-
-/* mon menu burger  */
-
-@media screen and (max-width:360px){
-  .image1 {
-    width: 360px;
-
-  }
-
-.presentation{
-  box-shadow: black 0px 5px 15px;
-  border-radius: 5px;
-    background-color: white ;
-    color: black;
-    height: 500px;
-    margin: 30px;
-}  
-}
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
-
-:root {
-  --font-size:1rem;
-}
-.light-mode {
-  --navbar-color: #222;
-  --navbar-bg-color: #F0F0F0;  
-}
-.dark-mode {
-  --navbar-color: #FFF;
-  --navbar-bg-color: #000;  
-}
-
-* {
-  box-sizing:border-box; 
-  outline:none;
-  margin:0;
-  padding:0;
-}
-ul {
-  list-style:none;
-}
-
-
-body {
-  margin:0;
-  font-size:var(--font-size);
-  font-family: 'Poppins', sans-serif;
-}
-.main-content {
-  padding:1rem;
-}
-
-.navbar {  
-  display:flex;
-  align-items:center; 
-  justify-content:space-between;   
-  padding:10px;
-  font-size:1.1rem;
-  background:var(--navbar-bg-color);
-  color:var(--navbar-color);
-}
-.navbar__links { 
-  display:flex; 
-}
-.navbar__link { 
-  padding:0 10px;
-}
-.navbar__link > a { 
-  color:var(--navbar-color);
-  text-decoration:none;
-}
-.burger {
-  display:none;
-}
-
-@media screen and (max-width:767.98px) {
-  .navbar__links { 
-    display:flex;
-    flex-direction:column;
-    width:0;
-    height:calc(100vh - 65px);  
-    position:absolute;
-    top:65px;
-    right:0;     
-    background:var(--navbar-bg-color);     
-    transform: translateX(110%);
-    transition: all .5s ease-in-out;
-  }
-  .show-nav .navbar__links { 
-    width:100vw;    
-    transform: translateX(0);
-  } 
-  .navbar__link {    
-    transform: translateX(101%);
-    transition: all .5s ease-in-out;
-  }
+header {
+  background: black;
+  height: 50px;
   
-  .show-nav .navbar__link  {        
-    transform: translateX(0);    
-  }   
-  .navbar__link > a {
-    display:block;
-    padding:1rem;
-    font-size:1.6rem;
-    color:var(--navbar-color);  
-    transition: all .4s ease-in-out;
-  }
-  .navbar__link > a:hover {
-    padding-left:2rem;
-    letter-spacing:5px;
-  }
-  
-  
-  .burger {
-    display:block;
-    position:relative;
-    padding:0;
-    width:45px;
-    height:45px;
-    border:none;
-    background:transparent;
-    cursor:pointer;
-  }
-  .bar {
-    display:block;    
-    width:45px;
-    height:4px;  
-    border-radius:3px;
-    background:var(--navbar-color); 
-    transition: all .5s ease-in-out;   
-  }
-  .bar::before, .bar::after {
-    content:"";
-    width:45px;
-    height:4px;
-    position:absolute; 
-    left:0;  
-    background:var(--navbar-color); 
-    border-radius:3px;    
-    transition: all .5s ease-in-out;
-  }
-  .bar::before {
-    transform:translateY(-12px)
-  }
-  .bar::after {
-    transform:translateY(12px)
-  }
-  .show-nav .bar {
-    width:0;
-    background:transparent;    
-  }
-  .show-nav .bar::before {
-    transform:rotate(45deg);
-  }
-  .show-nav .bar::after {
-    transform:rotate(-45deg);
-  }
-  
+}
+/*notre menu */
+span {
+  margin-left: 74%;
+  color: white;
+  display: block;
+  width: 90px;
+  height: 50px;
+  line-height: 47px;
+  background: gray;
+  text-align: center;
+  font-size: 25px;
+  font-family: 'Lato';
 
-  .show-nav .first {      
-    transition: all 1s ease-out;
-  } 
-  .show-nav .second {      
-    transition: all 1.1s ease-out;
-  } 
-  .show-nav .third {      
-    transition: all 1.2s ease-out;
-  } 
-  .show-nav .four {      
-    transition: all 1.3s ease-out;
-  } 
-  .show-nav .fifth {      
-    transition: all 1.4s ease-out;
-  }
+}
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 30%;
+  width: 100%;
+  text-align: center;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
 }
 
 
-@media screen and (min-width:768px) {
-  .navbar__link > a::after {
-    display:block;
-    content:"";
-    width:0;
-    height:1px;
-    background:var(--navbar-color);
-    transition:width .4s;
-  }
-  .navbar__link:hover > a::after {
-    width:100%;
-  }
+.overlay a:hover,
+.overlay a:focus {
+  color: #f1f1f1;
 }
 
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+/*notre fin de menu */
