--- a/style.css
+++ b/style.css
@@ -1,8 +1,57 @@
+body {
+  background-color: white;
+
+}
+
 header {
   background: black;
   height: 50px;
-  
 }
+
+.bienvenueimg {
+  margin-top: 20%;
+  height: 115px;
+}
+
+.imgphoto {
+  margin-top: 10px;
+}
+/* .deuxiemme{
+  margin-bottom: 50px;
+} */
+.ligne1{
+  background-color: black;
+  height:5px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+.presentation{
+  background-color: white;
+  box-shadow: black 0px 5px 15px;
+  text-align: center;
+  font-size: 20px;
+  border-radius: 10px;
+  margin-top: 20%;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+/* .presentation {
+  background-color: black;
+  color: white;
+  padding-top: 800px;
+  margin-right: 15px;
+  margin-left: 15px;
+  margin-top: 20%;
+} */
+
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-size: 25px;
+  margin-top: 100%;
+}
+
 /*notre menu */
 span {
   margin-left: 74%;
@@ -60,4 +109,5 @@ span {
   right: 45px;
   font-size: 60px;
 }
+
 /*notre fin de menu */
