--- a/style.css
+++ b/style.css
@@ -1,113 +1,190 @@
-body {
-  background-color: white;
+@media screen and (min-width: 320px) {
+
+  body {
+    background-color: white;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  header {
+    background: black;
+    height: 50px;
+  }
+
+  .bienvenueimg {
+    margin-top: 30%;
+    height: 117px;
+  }
+
+  .imgphoto {
+    margin-top: 10%;
+    margin-bottom: 7%;
+  }
+
+  .deuxieme {
+    background-color: white;
+    border-radius: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-bottom: 10%;
+    padding-top: 2px;
+    font-size: 20px;
+
+  }
+
+  .ligne1 {
+    background-color: black;
+    height: 1px;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 30px;
+  }
+
+  .presentation {
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: black 0px 5px 15px;
+    color: black;
+    padding-bottom: 5%;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-top: 30%;
+  }
+
+  footer {
+    background-color: black;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-size: 25px;
+    margin-top: 50%;
+  }
+
+  /*notre menu */
+  span {
+    margin-left: 74%;
+    color: white;
+    display: block;
+    width: 90px;
+    height: 50px;
+    line-height: 47px;
+    background: gray;
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Lato';
+
+  }
+
+  .overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+
+  .overlay-content {
+    position: relative;
+    top: 30%;
+    width: 100%;
+    text-align: center;
+  }
+
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+
+  .overlay a:hover,
+  .overlay a:focus {
+    color: #f1f1f1;
+  }
+
+
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+
+  /*notre fin de menu */
+}
+
+@media screen and (min-width:480px) {
+  header {
+    padding-left: 118px;
+  }
+
+  .bienvenueimg {
+    height: 155px;
+  }
+
+  .deuxieme {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .presentation {
+    background-color: red;
+  }
+
+  
 
 }
 
-header {
-  background: black;
-  height: 50px;
-}
 
-.bienvenueimg {
-  margin-top: 20%;
-  height: 115px;
-}
+@media screen and (min-width:768px) {
+  header {
+    padding-left: 405px;
+    height: 60px;
+  }
 
-.imgphoto {
-  margin-top: 10px;
-}
-/* .deuxiemme{
-  margin-bottom: 50px;
-} */
-.ligne1{
-  background-color: black;
-  height:5px;
-  margin-right: 20px;
-  margin-left: 20px;
-}
-.presentation{
-  background-color: white;
-  box-shadow: black 0px 5px 15px;
-  text-align: center;
-  font-size: 20px;
-  border-radius: 10px;
-  margin-top: 20%;
-  margin-right: 15px;
-  margin-left: 15px;
-}
-/* .presentation {
-  background-color: black;
-  color: white;
-  padding-top: 800px;
-  margin-right: 15px;
-  margin-left: 15px;
-  margin-top: 20%;
-} */
+  span {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 
-footer {
-  background-color: black;
-  color: white;
-  text-align: center;
-  font-size: 25px;
-  margin-top: 100%;
-}
+  .bienvenueimg {
+    height: 251px;
+  }
 
-/*notre menu */
-span {
-  margin-left: 74%;
-  color: white;
-  display: block;
-  width: 90px;
-  height: 50px;
-  line-height: 47px;
-  background: gray;
-  text-align: center;
-  font-size: 25px;
-  font-family: 'Lato';
+  .imgphoto {
+    margin-top: 50px;
+    margin-bottom: 5px;
+  }
+
+  .deuxieme {
+    background-color: white;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  .presentation {
+    background-color: white;
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+
+  footer {
+    padding-top: 20px;
+  }
 
 }
+@media screen and (min-width:1224px) {
 
-.overlay {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-
-  background-color: rgba(0, 0, 0, 0.9);
-  overflow-x: hidden;
-  transition: 0.5s;
+  
 }
-
-.overlay-content {
-  position: relative;
-  top: 30%;
-  width: 100%;
-  text-align: center;
-}
-
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-
-.overlay a:hover,
-.overlay a:focus {
-  color: #f1f1f1;
-}
-
-
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-}
-
-/*notre fin de menu */
+ 
